force-app/main/default/objects/Scope3PcmtItem/fields/Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>Audit_Status__c</fullName>
    <label>Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Audit_Status</valueSetName>
    </valueSet>
</CustomField>