force-app/main/default/objects/Scope3PcmtItem/fields/Business_Region__c.field-meta.xml
<CustomField>
    <fullName>Business_Region__c</fullName>
    <formula>IF(TEXT(ProcurementSummary.Scope3EmssnSrc.BusinessRegion) = &apos;&apos;, &apos;Global&apos;, TEXT(ProcurementSummary.Scope3EmssnSrc.BusinessRegion))</formula>
    <label>Business Region</label>
    <type>Text</type>
</CustomField>